testdata/baselines/reference/submodule/compiler/moduleAugmentationInAmbientModule2.errors.txt
main.ts(6,3): error TS2339: Property 'foo' does not exist on type 'Observable'.


==== main.ts (1 errors) ====
    /// <reference path="O.d.ts" />
    
    import {Observable} from "Observable";
    import "Map";
    let x: Observable;
    x.foo().x;
      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Observable'.
    
==== O.d.ts (0 errors) ====
    declare module "Observable" {
        class Observable {}
    }
    
    declare module "M" {
        class Cls { x: number }
    }
    
    declare module "Map" {
        import { Cls } from "M";
        module "Observable" {
            interface Observable {
                foo(): Cls;
            }
        }
    }
    